--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "@emotion/css": "11.10.0",
-    "@faker-js/faker": "7.5.0",
     "@tilemoon/react-theme-manager": "0.4.0",
     "normalize.css": "8.0.1",
+    "random-words": "1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
