--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "keykey",
+  "name": "keytype",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,18 +9,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/css": "11.10.0",
-    "@tilemoon/react-theme-manager": "0.4.0",
-    "normalize.css": "8.0.1",
-    "random-words": "1.2.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@arco-design/web-react": "2.64.1",
+    "@ricons/ionicons4": "0.12.0",
+    "@unocss/reset": "0.64.1",
+    "lodash-es": "4.17.21",
+    "random-words": "2.0.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "unocss": "0.64.1"
   },
   "devDependencies": {
-    "@types/react": "^18.0.23",
-    "@types/react-dom": "^18.0.7",
-    "@vitejs/plugin-react": "^2.1.0",
-    "typescript": "^4.8.4",
-    "vite": "^3.1.8"
+    "@types/lodash-es": "4.17.12",
+    "@types/node": "22.9.0",
+    "@types/react": "18.3.12",
+    "@types/react-dom": "18.3.1",
+    "@vitejs/plugin-react": "4.3.3",
+    "typescript": "5.6.3",
+    "vite": "5.4.11"
   }
 }
